<resources>
    <!--Franz string-->
    <string name="app_name">EduBox</string>
    <string name="menu_home">Home</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_activity_main_menu">MainActivityMenu</string>
    <string name="label_login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="action_analysis">Detailed Analysis</string>
    <string name="action_calendar">Calendar</string>
    <string name="action_check">Check</string>
    <string name="action_sound">Sound</string>
    <string name="title_activity_detailed_analysis">DetailedAnalysisActivity</string>
    <!--  Detailed Analysis -->
    <string name="tab_text_1">Day</string>
    <string name="tab_text_2">Week</string>
    <string name="tab_text_3">Month</string>
    <string name="detailed_analysis">Detailed Analysis</string>
    <string name="network_speed">Network Speed</string>
    <string name="average_speed">Average Speed</string>
    <string name="network_trends">Network Trends</string>
    <string name="highest_speed">Highest Speed</string>
    <string name="lowest_speed">Lowest Speed</string>
    <string name="disconnections">Disconnections</string>
    <string name="hourly">Hourly Prediction Speed</string>
    <!--Franz string-->
    <string name="notification">Notifications</string>
    <string name="speech">speech</string>
    <string name="leftIcon">lefticon</string>
    <string name="completed">completed</string>
    <string name="read">read</string>
    <string name="border">border</string>
    <string name="textview">TextView</string>

    <string name="number_picker_formatter" />
    <string name="time">07:30 am</string>
    <string name="progressCircle">TODO</string>
    <string name="eventTitleCalendar">MS Teams Meeting</string>
    <string name="eventSubTitleCalendar">Automata Theory</string>
    <string name="bullet">bullet</string>
    <string name="completed_events">Completed Events</string>

    <string-array name="types">
        <item>Content Type</item>
        <item>None</item>
        <item>Text/Image</item>
        <item>Video Stream</item>
        <item>Video Call</item>
        <item>Doc Collab</item>
    </string-array>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <!-- Notification -->
    <string name="notification_border_bottom" />
    <string name="notification_read_block_border" />
    <string name="event_title">Event Title</string>
    <string name="event_date">Event Date</string>
    <string name="event_time">Event Time</string>
    <string name="event_content">Event Content</string>
    <string name="event_info">Event Info</string>
    <string name="dialogEventTitle">Zoom Meeting</string>
    <string name="dialogEventDate">Date: 13 November 2020</string>
    <string name="dialogEventTime">Time: 09:30 am</string>
    <string name="dialogEventType">Type: Video Meeting</string>
    <string name="dialogEventSpeed">Min. Speed Requirement: 800 kbps</string>
    <string name="dialogEventData">Min. Data Consumption: 200 mb</string>
    <string name="dialogEventInfo">Note: Presentation of ERD and Class Diagram.</string>
    <string name="btnDialogView">View</string>
    <string name="btnDialogFinish">Finish</string>
    <!--Adrian string-->
</resources>