<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".notifications.NotificationView"
    android:background="@color/primary_off_white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/notificationToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Theme.EduBox.AppBarOverlay"
        app:title="Notifications" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="15dp"
        card_view:cardElevation="10dp"
        card_view:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/eventTitleView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_title"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/eventDateView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_date" />

            <TextView
                android:id="@+id/eventTimeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_time" />

            <TextView
                android:id="@+id/eventContentView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/eventInfoView"
                android:layout_width="match_parent"
                android:layout_height="93dp"
                android:text="@string/event_info" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>