<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/bullet"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_weight="0"
        android:contentDescription="@string/bullet"
        android:padding="8dp"
        app:srcCompat="@drawable/ic_disc_babyblue"
        tools:ignore="VectorDrawableCompat" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical">

        <TextView
            android:id="@+id/eventContentCalendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/eventTitleCalendar" />

        <TextView
            android:id="@+id/eventTitleCalendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/eventSubTitleCalendar"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>