<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_blue">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/left_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/leftIcon"
            android:src="@drawable/ic_baseline_menu_24"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="86dp"
            android:layout_marginRight="86dp"
            android:layout_toStartOf="@+id/completed"
            android:layout_toLeftOf="@+id/completed"
            android:layout_toEndOf="@+id/left_icon"
            android:layout_toRightOf="@+id/left_icon"
            android:text="@string/notification"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/completed"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_toStartOf="@+id/speech"
            android:layout_toLeftOf="@+id/speech"
            android:contentDescription="@string/completed"
            android:src="@drawable/ic_baseline_not_completed"
            android:tag="completedOff" />

        <ImageView
            android:id="@+id/speech"
            android:tag="speechOn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/speech"
            android:src="@drawable/ic_baseline_notify_with_speech"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

</RelativeLayout>